--- a/private/appconfig.ini
+++ b/private/appconfig.ini
@@ -12,8 +12,8 @@ names = localhost:*, 127.0.0.1:*, *:*, *
 
 ; db configuration
 [db]
-uri       = postgres://adolfo:tH5SE4ay@localhost/sigulab3
-migrate   = true
+uri       = postgres://arnaldopxm:@localhost/sistemadesechos
+migrate = true
 pool_size = 10 ; ignored for sqlite
 
 ; smtp address and credentials
